--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,6 +9,19 @@
     <%= stylesheet_link_tag 'application', media: 'all' %>
     <%= javascript_pack_tag 'application' %>
     <%= javascript_pack_tag 'index' %>
+    <meta name="apple-mobile-web-app-capable" content="yes">
+<meta name="apple-mobile-web-app-status-bar-style" content="black">
+<meta name="apple-mobile-web-app-title" content="Sns-Spa">
+<link rel="apple-touch-icon" href="/apple-touch-icon.png" sizes="180x180">
+ <link rel="manifest" href="/manifest.json">
+ <script>
+ if('serviceWorker' in navigator){
+	navigator.serviceWorker.register('/service-worker.js').then(function(){
+		console.log("Service Worker is registered!!");
+	});
+}
+ </script>
+
   </head>
 
   <body>
